examples/errors/func_no_ret.cy
fun foo() -> float {
    write("hello");

    def a: int = 5;
}
